Make visibility of text labels based on space available rather than a fixed amount

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,6 @@ svg .button text {
 }
 
 .switch-controls label {
-	float: left;
 	display: inline-block;
 	width: 100px;
 	background-color: #f3f3f3;
@@ -206,3 +205,12 @@ svg .notes.url {
 	text-decoration: underline;
 }
 
+/* Labels */
+.nonselectable {
+    user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -webkit-touch-callout: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+}
